--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,28 @@
     tools:context=".MainActivity">
 
     <ImageView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scaleType="centerCrop"
     android:src="@drawable/androidparty"/>
-
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="36sp"
-    android:fontFamily="sans-serif-light"
-    android:text="Happy Birthday Mom!" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Love, Sweet Potatoe Pie!"
+        android:textSize="36sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/white"
+        android:padding="20dp"
+        android:text="Happy Birthday Mom!" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="24sp"
         android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/white"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:padding="20dp"
+        android:text="Love, Sweet Potato Pie!"/>
     </RelativeLayout>
