--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:padding="20dp"
-        android:text="Happy Birthday Mom!" />
+        android:text="Happy Birthday Mom" />
 
     <TextView
         android:layout_width="wrap_content"
